Corrects carousel.scss and _carousel.html.erb

--- a/frontend/app/assets/stylesheets/spree/frontend/components-bootstrap/carousel.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/components-bootstrap/carousel.scss
@@ -34,11 +34,10 @@
   &-icon {
     &-control {
       @mixin arrow {
-        top: 0;
-        width: 15%;
         z-index: 1;
-        @include media-breakpoint-up(xl) {
-          width: auto;
+        top: calc(50% - 44px);
+        @include media-breakpoint-up(md) {
+          top: calc(50% - 56px);
         }
       }
       &-rounded {
@@ -50,14 +49,14 @@
         color: $secondary-font-color;
       }
       &--previous {
-        left: 0px;
+        left: 15px;
         @include arrow;
         @include media-breakpoint-up(xl) {
           left: -30px;
         }
       }
       &--next {
-        right: 0;
+        right: 15px;
         @include arrow;
         @include media-breakpoint-up(xl) {
           right: -30px;
@@ -66,14 +65,13 @@
     }
   }
   &-items-container {
-    margin-left: 54px;
-    margin-right: 54px;
-  }
-
-  &-inner-width {
-    @media (min-width: 1307px) {
-      max-width: 1307px;
-      margin: auto;
+    @include media-breakpoint-down(lg) {
+      margin-left: 40px;
+      margin-right: 40px;
+    }
+    @include media-breakpoint-down(sm) {
+      margin-left: 20px;
+      margin-right: 20px;
     }
   }
 }
