--- a/frontend/app/assets/stylesheets/spree/frontend/components-bootstrap/carousel.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/components-bootstrap/carousel.scss
@@ -35,28 +35,34 @@
     &-control {
       @mixin arrow {
         z-index: 1;
-        top: calc(50% - 44px);
+        top: 0;
+        bottom: 42px;
         @include media-breakpoint-up(md) {
-          top: calc(50% - 56px);
+          bottom: 70px;
         }
       }
       &-rounded {
-        $size: 44px;
+        $size: 28px;
         border-radius: 50%;
         width: $size;
         height: $size;
         background: $secondary-background;
         color: $secondary-font-color;
+        @include media-breakpoint-up(sm) {
+          $size: 44px;
+          width: $size;
+          height: $size;
+        }
       }
       &--previous {
-        left: 15px;
+        left: 7px;
         @include arrow;
         @include media-breakpoint-up(xl) {
           left: -30px;
         }
       }
       &--next {
-        right: 15px;
+        right: 7px;
         @include arrow;
         @include media-breakpoint-up(xl) {
           right: -30px;
@@ -65,13 +71,15 @@
     }
   }
   &-items-container {
-    @include media-breakpoint-down(lg) {
-      margin-left: 40px;
-      margin-right: 40px;
+    margin-left: 7px;
+    margin-right: 7px;
+    @include media-breakpoint-up(sm) {
+      margin-left: 30px;
+      margin-right: 30px;
     }
-    @include media-breakpoint-down(sm) {
-      margin-left: 20px;
-      margin-right: 20px;
+    @include media-breakpoint-up(lg) {
+      margin-left: 0;
+      margin-right: 0;
     }
   }
 }
