--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/shared/main_nav_bar.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/shared/main_nav_bar.scss
@@ -6,9 +6,9 @@
   &-item {
     text-transform: uppercase;
     font-size: 20px;
-    font-weight: $font-weight-medium;
+    font-weight: 500;
     a {
-      color: theme-color('dark-text');
+      color: theme-color("dark-text");
 
       &:hover {
         text-decoration: none;
@@ -70,14 +70,14 @@
 
       form {
         input#keywords {
-          color: theme-color('dark-text');
+          color: theme-color("dark-text");
           font-size: font-px-to-rem(14px);
           width: calc(100% - 40px);
           &:focus {
             outline: none;
           }
           &::placeholder {
-            color: theme-color('borders');
+            color: theme-color("borders");
           }
           &::-webkit-search-cancel-button {
             display: none;
@@ -86,7 +86,7 @@
             font-size: font-px-to-rem(22px);
           }
         }
-        input[type='submit'] {
+        input[type="submit"] {
           display: none;
         }
       }
@@ -98,6 +98,6 @@
   }
 
   .spree-icon {
-    color: theme-color('dark-text');
+    color: theme-color("dark-text");
   }
 }
