--- a/frontend/app/assets/stylesheets/spree/frontend/components-bootstrap/carousel.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/components-bootstrap/carousel.scss
@@ -77,7 +77,7 @@
       margin-left: 30px;
       margin-right: 30px;
     }
-    @include media-breakpoint-up(lg) {
+    @media (min-width: map-get($grid-breakpoints, "xl") + 100px) {
       margin-left: 0;
       margin-right: 0;
     }
