--- a/frontend/app/views/spree/products/show.html.erb
+++ b/frontend/app/views/spree/products/show.html.erb
@@ -101,7 +101,7 @@
     <div class="product-details-related">
       <p class="font-weight-bold text-center text-uppercase product-details-carousel-text"><%= Spree.t('pdp.you_may_also_like') %></p>
 
-      <%= render 'carousel', id: 'related-products-carousel', products: related_products %>
+      <%= render 'spree/shared/carousel_4_products', id: 'related-products-carousel', products: related_products %>
     </div>
   <% end %>
 <% end %>
