--- a/frontend/app/views/spree/addresses/_form.html.erb
+++ b/frontend/app/views/spree/addresses/_form.html.erb
@@ -12,7 +12,9 @@
     </p>
   <% elsif field == "state" %>
     <div class="form-group mb-4">
-      <%= address_field(address_form, :state, address_id) { address_state(address_form, address.country, address_id) } if Spree::Config[:address_requires_state] %>
+      <%= address_field(address_form, :state, address_id) {
+          address_state(address_form, address.country, address_id)
+        } if Spree::Config[:address_requires_state] %>
     </div>
   <% else %>
     <% next if field == "company" && !Spree::Config[:company] %>
