--- a/frontend/app/views/spree/shared/_head.html.erb
+++ b/frontend/app/views/spree/shared/_head.html.erb
@@ -1,5 +1,6 @@
 <title><%= title %></title>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
+<%= render partial: 'spree/shared/homepage_meta_tags' if current_path_homepage? %>
 <%== meta_data_tags %>
 <%= canonical_tag(current_store.url) %>
 <%= favicon_link_tag 'favicon.ico' %>
