--- a/frontend/app/views/spree/shared/_head.html.erb
+++ b/frontend/app/views/spree/shared/_head.html.erb
@@ -1,5 +1,8 @@
 <title><%= title %></title>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta name="twitter:card" content="summary" />
+<meta property="og:description" content="<%= meta_data[:description] %>" />
+<meta property="og:title" content="<%= title %>" />
 <%== meta_data_tags %>
 <%= canonical_tag(current_store.url) %>
 <%= favicon_link_tag 'favicon.ico' %>
