--- a/frontend/app/views/spree/shared/_main_nav_bar.html.erb
+++ b/frontend/app/views/spree/shared/_main_nav_bar.html.erb
@@ -1,16 +1,42 @@
-<ul class="nav h-100 main-nav-bar" data-hook>
-  <% categories_data.each do |category| %>
-    <li class="navbar main-nav-bar-dropdown main-nav-bar-category" data-hook>
-      <a href="<%= category[:url] %>" class="p-2 main-nav-bar-item main-nav-bar-category-button">
-        <%= category[:name] %>
-      </a>
-
-      <div class="w-100 shadow main-nav-bar-category-dropdown">
-        <%= render partial: 'spree/shared/category_nav_bar', locals: {
-          link_categories: category[:subcategories],
-          category: category[:name]
-        } %>
-      </div>
-    </li>
-  <% end %>
-</ul>
+<% if spree_navigation_data.any? %>
+  <ul class="nav h-100 main-nav-bar">
+    <% spree_navigation_data.each do |root| %>
+      <li class="navbar main-nav-bar-dropdown main-nav-bar-category">
+        <%= link_to root[:title], root[:url], class: 'p-2 main-nav-bar-item main-nav-bar-category-button' %>
+        <div class="w-100 shadow main-nav-bar-category-dropdown">
+          <div class="container p-0 d-flex justify-content-xl-around mx-auto">
+            <div class="row">
+              <div class="category-links">
+                <div class="category-links-header text-uppercase">
+                  <%= root[:subtitle] %>
+                </div>
+                <ul class="pl-0">
+                  <% root[:items].each do |item| %>
+                    <li>
+                      <%= link_to item[:title], item[:url], class: 'text-uppercase' %>
+                    </li>
+                  <% end %>
+                </ul>
+              </div>
+              <% root[:promo_banners].each do |promo_banner| %>
+                <%= link_to promo_banner[:url] do %>
+                  <div class="category-image category-image text-center mx-3">
+                    <%= main_nav_image(promo_banner[:image], promo_banner[:title]) %>
+                    <div class="category-box">
+                      <div class="category-box-small-text">
+                        <%= promo_banner[:subtitle] %>
+                      </div>
+                      <div class="category-box-big-text">
+                        <%= promo_banner[:title] %>
+                      </div>
+                    </div>
+                  </div>
+                <% end %>
+              <% end %>
+            </div>
+          </div>
+        </div>
+      </li>
+    <% end %>
+  </ul>
+<% end %>
