Mobile navigation using dynamic data

--- a/frontend/app/views/spree/shared/_header.html.erb
+++ b/frontend/app/views/spree/shared/_header.html.erb
@@ -19,7 +19,7 @@
         <div id="top-nav-bar" class="flex-grow-1 header-spree-fluid-secondary-navigation">
           <%= render partial: 'spree/shared/nav_bar' %>
         </div>
-        <%#= render partial: 'spree/shared/mobile_navigation' %>
+        <%= render partial: 'spree/shared/mobile_navigation' %>
       </div>
     </div>
   </header>
