Adds ajax logic for improving carousel load time

--- a/frontend/app/views/spree/products/show.html.erb
+++ b/frontend/app/views/spree/products/show.html.erb
@@ -96,14 +96,12 @@
       <%= render partial: 'spree/shared/no_product_available' %>
     </div>
   </div>
-
-  <% if related_products.any? %>
-    <div class="product-details-related">
-      <p class="font-weight-bold text-center text-uppercase product-details-carousel-text"><%= Spree.t('pdp.you_may_also_like') %></p>
-
-      <%= render 'spree/shared/carousel_4_products', id: 'related-products-carousel', products: related_products %>
-    </div>
-  <% end %>
 <% end %>
 
 <%= products_structured_data([@product]) %>
+
+<script>
+  window.onload = function() {
+    Spree.fetchRelatedProductcs('<%= @product.slug %>')
+  };
+</script>
