Corrects requested changes

--- a/frontend/app/views/spree/products/show.html.erb
+++ b/frontend/app/views/spree/products/show.html.erb
@@ -100,8 +100,10 @@
 
 <%= products_structured_data([@product]) %>
 
-<script>
-  window.onload = function() {
-    Spree.fetchRelatedProductcs('<%= @product.slug %>')
-  };
-</script>
+<% if @product.respond_to?(:has_related_products?) %>
+  <script>
+    window.onload = function() {
+      Spree.fetchRelatedProductcs('<%= @product.slug %>', '<%= @product.id %>')
+    };
+  </script>
+<% end %>
