Corrects routes, show.html, related.js and frontend.js

--- a/frontend/app/views/spree/products/show.html.erb
+++ b/frontend/app/views/spree/products/show.html.erb
@@ -103,7 +103,7 @@
 <% if @product.respond_to?(:has_related_products?) %>
   <script>
     window.onload = function() {
-      Spree.fetchRelatedProductcs('<%= @product.slug %>', '<%= @product.id %>')
+      Spree.fetchRelatedProductcs('<%= @product.slug %>')
     };
   </script>
 <% end %>
