Corrects script and changes html to tamplate

--- a/frontend/app/views/spree/products/show.html.erb
+++ b/frontend/app/views/spree/products/show.html.erb
@@ -102,8 +102,8 @@
 
 <% if @product.respond_to?(:has_related_products?) %>
   <script>
-    window.onload = function() {
+    document.addEventListener("turbolinks:render", function() {
       Spree.fetchRelatedProductcs('<%= @product.slug %>')
-    };
+    });
   </script>
 <% end %>
