--- a/frontend/app/views/spree/checkout/registration.html.erb
+++ b/frontend/app/views/spree/checkout/registration.html.erb
@@ -7,8 +7,7 @@
     <div class="col-xs-12 col-lg-6">
       <div class="col-lg-11 mx-auto pt-lg-2">
         <% if defined?(spree_signup_path) %>
-          <h3 class="spree-header header-sm spree-mt-large mb-3 mb-sm-4 mb-xl-4"><%= Spree.t('dont_have_account') %></h3>
-          <%= link_to Spree.t(:sign_up), spree_signup_path, class: 'btn btn-block btn-outline-primary spree-btn' %>
+          <%= render partial: 'spree/shared/registration', locals: { registration_button: '' } %>
           <div class="checkout-registration-styled-or">
             <%= Spree.t(:or) %>
           </div>
