--- a/frontend/app/views/spree/products/_product.html.erb
+++ b/frontend/app/views/spree/products/_product.html.erb
@@ -1,4 +1,5 @@
 <% url = spree.product_path(product, taxon_id: taxon.try(:id)) %>
+<% price = product.price_in(current_currency).amount %>
 <div id="product_<%= product.id %>" class="d-flex w-100 col-12 col-sm-6 col-lg-4 col-xl-3 product-list-item mb-4" data-hook="products_list_item">
   <div class="card w-100">
     <% cache(taxon.present? ? [I18n.locale, current_currency, taxon, product] : cache_key_for_product(product)) do %>
@@ -9,7 +10,7 @@
         <% end %>
       </div>
       <div class="card-footer text-center">
-        <span class="price selling lead" content="<%= (product.price_in(current_currency).amount.nil?)? 0 : product.price_in(current_currency).amount.to_d %>">
+        <span class="price selling lead" content="<%= price.nil? 0 : price.to_d %>">
           <%= display_price(product) %>
         </span>
         <span content="<%= current_currency %>"></span>
