--- a/frontend/app/views/spree/shared/_product.html.erb
+++ b/frontend/app/views/spree/shared/_product.html.erb
@@ -1,8 +1,11 @@
-<% cache [common_product_cache_keys, product, @taxon&.id] do %>
-  <%= link_to spree.product_path(product, taxon_id: @taxon&.id), class: 'h-100 d-flex flex-column justify-content-between' do %>
+<% url = spree.product_path(product, taxon_id: @taxon&.id) %>
+<%= link_to url, class: 'h-100 d-flex flex-column justify-content-between' do %>
+  <% cache [common_product_cache_keys, product] do %>
     <%= plp_and_carousel_image(product, image_class) %>
     <div>
-      <div class="product-component-name" title="<%= product.name %>"><%= product.name %></div>
+      <div class="product-component-name" title="<%= product.name %>">
+        <%= product.name %>
+      </div>
       <div class="product-component-price"><%= display_price(product) %></div>
     </div>
   <% end %>
