Fix delete address popup sass variables

--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/shared/delete_address_popup.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/shared/delete_address_popup.scss
@@ -1,8 +1,8 @@
 .delete-address-popup {
   width: 100%;
   height: 277px;
-  border: solid 1px #707070;
-  background-color: #ffffff;
+  border: solid 1px $global-border-style;
+  background-color: $primary-background;
   align-items: center;
   position: static;
   margin: auto;
