--- a/frontend/app/views/spree/products/show.html.erb
+++ b/frontend/app/views/spree/products/show.html.erb
@@ -7,40 +7,12 @@
 <% cache cache_key_for_product do %>
   <div class="container pt-4 product-details">
     <div class="row" data-hook="product_show">
-      <div class="col-12 col-md-7 col-lg-7" data-hook="product_left_part">
-        <div
-          class="w-100 d-flex align-self-start justify-content-between product-details-images"
-          data-hook="product_left_part_wrap"
-        >
-          <% if @product_images.size > 1 %>
-            <div class="d-none d-md-block product-details-thumbnails" data-hook="product_thumbnails">
-              <%= render 'spree/shared/carousel/thumbnails',
-                        images: @product_images,
-                        group_id: 'main-product-carousel',
-                        id: 'productThumbnailsCarousel',
-                        trigger_id: 'productCarousel',
-                        per_page: 5
-              %>
-            </div>
-          <% end %>
-          <div class="product-details-single" data-hook="product_images">
-            <% if @product_images.size == 1 %>
-              <%= plp_and_carousel_image(@product) %>
-            <% else %>
-              <%= render 'spree/shared/carousel/single',
-                        images: @product_images,
-                        group_id: 'main-product-carousel',
-                        id: 'productCarousel',
-                        trigger_id: 'productCarousel',
-                        zoomed: false
-              %>
-            <% end %>
-          </div>
-        </div>
-      </div>
+      <%= render partial: 'gallery' %>
       <div class="col-12 col-md-5" data-hook="product_right_part">
         <div id="product-description" data-hook="product_right_part_wrap">
-          <h1 class="mt-3 mt-md-0 text-center text-md-left product-details-title"><%= @product.name %></h1>
+          <h1 class="mt-3 mt-md-0 text-center text-md-left product-details-title">
+            <%= @product.name %>
+          </h1>
           <div id="cart-form" data-hook="cart_form">
             <%= render 'cart_form', variant_change_identifier: 'productCarousel' %>
           </div>
@@ -64,41 +36,8 @@
       <%= render partial: 'spree/shared/no_product_available' %>
     </div>
 
-    <div class="modal fade" id="picturesModal" tabindex="-1" role="dialog" >
-      <div class="modal-dialog--zoom modal-dialog mw-100 vh-100 mt-0 mb-0" role="document">
-        <div class="modal-content h-100">
-          <div class="modal-body">
-            <button class="modal-close" type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&#x2715;</span>
-            </button>
-            <div class="d-flex justify-content-center align-items-center product-details-images h-100">
-              <% if @product_images.size > 1 %>
-                <div class="d-none d-sm-block product-details-thumbnails">
-                  <%= render 'spree/shared/carousel/thumbnails',
-                             images: @product_images,
-                             group_id: 'main-product-modal-carousel',
-                             id: 'productModalThumbnailsCarousel',
-                             trigger_id: 'productCarousel',
-                             per_page: 4
-                  %>
-                </div>
-              <% end %>
-              <div class="product-details-single">
-                <%= render 'spree/shared/carousel/single',
-                           images: @product_images,
-                           group_id: 'main-product-modal-carousel',
-                           id: 'productModalCarousel',
-                           trigger_id: 'productCarousel',
-                           zoomed: true
-                %>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+    <%= render partial: 'gallery_modal' %>
   </div>
-
   <div id="related-products" />
 
   <%= products_structured_data([@product]) %>
